# claude-prism

./: package.json  pnpm-lock.yaml
.github/vcpkg-overlays/graphite2/: portfile.cmake  vcpkg.json
.github/workflows/: build-desktop.yml
apps/desktop/: build-windows.bat  build-windows.ps1  package.json  start-dev.bat
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: claude.rs  engine.rs  latex.rs  lib.rs  main.rs  skills.rs
apps/desktop/src/__tests__/lib/: tauri-fs.test.ts
apps/desktop/src/__tests__/stores/: document-store.test.ts
apps/desktop/src/components/claude-chat/: chat-composer.tsx  chat-messages.tsx  chat-panel.tsx  engine-selector.tsx  engine-settings-dialog.tsx
apps/desktop/src/components/workspace/: sidebar.tsx  workspace-layout.tsx
apps/desktop/src/components/workspace/editor/: latex-editor.tsx
apps/desktop/src/hooks/: use-claude-events.ts  use-keyboard-shortcuts.ts
apps/desktop/src/lib/: app-zoom.ts
apps/desktop/src/stores/: claude-chat-store.ts  document-store.ts  engine-store.ts  preview-store.ts
docs/superpowers/specs/: 2026-06-30-pi-engine-integration-design-zh.md  2026-06-30-pi-engine-integration-design.md
